<ViewSwitcher xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="edu.uwyo.toddt.checkbook.TransFragment"
    android:id="@+id/transSwitcher">

    <!-- Transaction table view -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <ListView
            android:id="@+id/trans_listV"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

        </ListView>

    </LinearLayout>

    <!-- Transaction add/edit view -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- TODO: Content -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingTop="10dp"
            android:textSize="10pt"
            android:textColor="#000000"
            android:text="@string/lbl_date" />

        <EditText
            android:id="@+id/edit_date"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="10pt"
            android:hint="mm/dd/yyyy"
            android:inputType="date"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingTop="10dp"
            android:textSize="10pt"
            android:textColor="#000000"
            android:text="@string/lbl_type" />

        <EditText
            android:id="@+id/edit_type"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="10pt"
            android:hint="Type"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingTop="10dp"
            android:textSize="10pt"
            android:textColor="#000000"
            android:text="@string/lbl_name" />

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="10pt"
            android:hint="Name"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingTop="10dp"
            android:textSize="10pt"
            android:textColor="#000000"
            android:text="@string/lbl_amount" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="10pt"
                android:layout_weight="1"
                android:textColor="#000000"
                android:text="$"/>

            <EditText
                android:id="@+id/edit_amount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="10pt"
                android:layout_weight=".05"
                android:inputType="numberDecimal"
                android:hint="Amount"
                android:textAlignment="center"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingTop="10dp"
            android:textSize="10pt"
            android:textColor="#000000"
            android:text="@string/lbl_category" />

        <Spinner
            android:id="@+id/cat_spinner"
            android:layout_width="match_parent"
            android:layout_height="50dp">

        </Spinner>

        <Button
            android:id="@+id/btnTransSubmit"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:text="Save"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/btnTransDelete"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:text="Delete"
            android:layout_gravity="center_horizontal"
            android:visibility="invisible"/>

    </LinearLayout>

</ViewSwitcher>
